--- a/frontend/static/html/dataAnalyticsDashboard.css
+++ b/frontend/static/html/dataAnalyticsDashboard.css
@@ -34,7 +34,7 @@ font-size: 28px;}
     position: fixed;
     margin-left: 1200px;
     display: inline-block;
-    bottom: 560px;
+    bottom: 545px;
     z-index: 3;
     border-radius: 5px;
     color: white;
@@ -98,11 +98,59 @@ NumberOfShootouts {
 }
 
 .btnAdmin1{
-     width: 180px;
-     background-color: transparent;
-     border: none;
-     color: white;
-     font-size: 20px;
-     margin-top: -20px;
-     margin-left: 950px;
+    font-size: 19px;
+         top: 3.5%;
+         margin-left: 1050px;
+         position: fixed;
+         border: none;
+         background-color: transparent;
+         color: white;
      }
+
+ .helpBtn11{
+         background-color: #E9AD9C;
+         border: none;
+         width: 40px;
+         height: 40px;
+         position: fixed;
+         margin-left: 1200px;
+         display: inline-block;
+         bottom: 560px;
+         z-index: 3;
+         border-radius: 5px;
+         color: white;
+         }
+         .helpBtn11 .helpText{
+         visibility: hidden;
+         width: 150px;
+         height: 330px;
+         background-color: #E9AD9C;
+         color: white;
+         text-align: center;
+         border-radius: 5px;
+         padding: 7px 0;
+         position: absolute;
+         z-index: 1;
+         bottom: -730%;
+         left: -225%;
+         margin-left: -70px;
+         opacity: 0;
+         transition: opacity 0.3s;
+         }
+         .helpBtn11 .helpText::after{
+         content: "";
+         position: absolute;
+         top: 10%;
+         left: 100%;
+         margin-left: -5px;
+         border-width: 5px;
+         border-style: solid;
+         border-color: #E9AD9C transparent transparent transparent;
+         }
+         .helpBtn11:hover .helpText{
+         visibility: visible;
+         opacity: 1;
+         }
+         .helpBtn11:hover{
+         cursor: pointer;
+         opacity: 0.9;}
