--- a/frontend/static/html/shootout.css
+++ b/frontend/static/html/shootout.css
@@ -163,4 +163,6 @@ table, th, td {
 .container {
     margin: auto;
     width: 80%;
-    margin-left: 30%;}
+    margin-left: 30%;
+    margin-bottom: 50px;
+    }
