--- a/frontend/static/html/compare_profile.css
+++ b/frontend/static/html/compare_profile.css
@@ -129,10 +129,10 @@
 .helpBtn2{
     background-color: #E9AD9C;
     border: none;
-    width: 40px;
+    width: 45px;
     height: 40px;
     position: fixed;
-    margin-left: 1220px;
+    margin-left: 1210px;
     display: inline-block;
     bottom: 510px;
     z-index: 2;
@@ -143,7 +143,7 @@
     .helpBtn2 .helpText{
     visibility: hidden;
     width: 170px;
-    height: 190px;
+    height: 230px;
     background-color: #E9AD9C;
     color: white;
     text-align: center;
@@ -151,7 +151,7 @@
     padding: 7px 0;
     position: absolute;
     z-index: 1;
-    bottom: -380%;
+    top: 10%;
     left: -280%;
     margin-left: -70px;
     opacity: 0;
