close pictures profile

--- a/frontend/static/html/compare_profile.css
+++ b/frontend/static/html/compare_profile.css
@@ -504,6 +504,10 @@ body {
     }
 }*/
 
+#hover {
+    cursor: pointer;
+}
+
 /*MODAL PROFILE START ----------------------------------------*/
 .modal {
     display: none; /* Hidden by default */
@@ -527,26 +531,6 @@ body {
     max-width: 700px;
 }
 
-/* Caption of Modal Image */
-#caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-    text-align: center;
-    color: #ccc;
-    padding: 10px 0;
-    height: 150px;
-}
-
-/* Add Animation */
-.modal-content, #caption {
-    -webkit-animation-name: zoom;
-    -webkit-animation-duration: 0.6s;
-    animation-name: zoom;
-    animation-duration: 0.6s;
-}
-
 @-webkit-keyframes zoom {
     from {-webkit-transform:scale(0)}
     to {-webkit-transform:scale(1)}
@@ -558,19 +542,21 @@ body {
 }
 
 /* The Close Button */
-.close {
+#close {
     position: absolute;
-    top: 15px;
+    top: 30px;
     right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
+    font-color: white;
+    font-size: 30px;
     font-weight: bold;
     transition: 0.3s;
+    width: auto;
+    height: 50px;
 }
 
-.close:hover,
-.close:focus {
-    color: #bbb;
+#close:hover,
+#close:focus {
+    color: white;
     text-decoration: none;
     cursor: pointer;
 }
